# Walking-Assistance-for-the-Blind

./: README.md  edge dect  jnajkcn
accelerator and full down detected demo/: BMA220.cpp  CMakeLists.txt
button callback demo/: CMakeLists.txt  button.cpp  restart_program.sh
final demo/: CMakeLists.txt  final.cpp  restart_program.sh
trafic light demo/: tfl.cpp  trafficlight.h
vibration motor and buzzer demo/: CMakeLists.txt  motorbuzzer.cpp
